--- a/services.html
+++ b/services.html
@@ -53,49 +53,45 @@
                     <a href="./services.html" class="nav-link-item nav-link-with-arrow">Services</a>
                     <ul class="dropdown-menu">
                         <li class="dropdown-item-has-children">
-                            <a href="#">Chiropractic</a>
+                            <a href="./services/chiropractic.html">Chiropractic</a>
                         </li>
                         <li class="dropdown-item-has-children">
-                            <a href="#">Physical Therapy</a>
+                            <a href="./services/physical-therapy.html">Physical Therapy</a>
                         </li>
                         <li class="dropdown-item-has-children">
                             <a href="#">Evaluations & Diagnoses</a>
                             <ul class="dropdown-submenu">
-                                <li><a href="#">Digital X-rays</a></li>
-                                <li><a href="#">MRI</a></li>
-                                <li><a href="#">Ultrasound</a></li>
-                                <li><a href="#">Allergy testing</a></li>
-                                <li><a href="#">Food sensitivity testing</a></li>
+                                <li><a href="./services/digital-x-rays.html">Digital X-rays</a></li>
+                                <li><a href="./services/mua.html">MRI</a></li>
+                                <li><a href="./services/ultrasound.html">Ultrasound</a></li>
+                                <li><a href="./services/allergy-testing.html">Allergy testing</a></li>
+                                <li><a href="./services/food-sensitivity-testing.html">Food sensitivity testing</a></li>
                             </ul>
                         </li>
                         <li class="dropdown-item-has-children">
                             <a href="#">Level 1 treatments: Conservative Care</a>
                             <ul class="dropdown-submenu">
-                                <li><a href="#">Chiropractic care & posture correction</a></li>
-                                <li><a href="#">Physical therapy</a></li>
-                                <li><a href="#">Massage therapy</a></li>
-                                <li><a href="#">K-Laser (Class IV laser therapy)</a></li>
-                                <li><a href="#">Trigger point injections</a></li>
-                                <li><a href="#">Spinal decompression therapy</a></li>
+                                <li><a href="./services/chiropractic.html">Chiropractic care & posture correction</a></li>
+                                <li><a href="./services/physical-therapy.html">Physical therapy</a></li>
+                                <li><a href="./services/mua.html">Massage therapy</a></li>
+                                <li><a href="./services/k-laser.html">K-Laser (Class IV laser therapy)</a></li>
+                                <li><a href="./services/transforminal-epidural.html">Trigger point injections</a></li>
+                                <li><a href="./services/spinal-decompression.html">Spinal decompression therapy</a></li>
                             </ul>
                         </li>
                         <li class="dropdown-item-has-children">
                             <a href="#">Level 2 treatments: Interventional Care</a>
                             <ul class="dropdown-submenu">
-                                <li><a href="./services/transforminal-epidural.html">Transforaminal epidural
-                                        injections</a></li>
+                                <li><a href="./services/transforminal-epidural.html">Transforaminal epidural injections</a></li>
                                 <li><a href="./services/facet-joint-injections.html">Facet joint injections</a></li>
-                                <li><a href="./services/botox-for-migraines.html">Botox for migraines - Botulotoxin
-                                        Dystonia</a></li>
+                                <li><a href="./services/botox-for-migraines.html">Botox for migraines - Botulotoxin Dystonia</a></li>
                                 <li><a href="./services/mua.html">Manipulation under anesthesia (MUA)</a></li>
-                                <li><a href="./services/platelet-rich-plasma.html">Platelet-rich plasma (PRP)
-                                        therapy</a></li>
+                                <li><a href="./services/platelet-rich-plasma.html">Platelet-rich plasma (PRP) therapy</a></li>
                                 <li><a href="./services/joint-injections.html">Joint Injections</a></li>
                                 <li><a href="./services/spinal-cord.html">Spinal cord stimulation</a></li>
                                 <li><a href="./services/radiofrequency-ablation.html">Radiofrequency ablation</a></li>
                                 <li><a href="./services/venefit.html">Venefit</a></li>
-                                <li><a href="./services/viscosupplementation.html">Viscosupplementation (joint
-                                        therapy)</a></li>
+                                <li><a href="./services/viscosupplementation.html">Viscosupplementation (joint therapy)</a></li>
                                 <li><a href="./services/selective-nerve.html">Selective nerve root blocks</a></li>
                                 <li><a href="./services/lumbar-sympathetic.html">Lumbar sympathetic block</a></li>
                                 <li><a href="./services/racz-caudal.html">Racz caudal neurolysis</a></li>
@@ -104,21 +100,21 @@
                         <li class="dropdown-item-has-children">
                             <a href="#">Level 3 treatments: Orthopedic Care</a>
                             <ul class="dropdown-submenu">
-                                <li><a href="#">Knee Replacement</a></li>
-                                <li><a href="#">Hip Replacement</a></li>
-                                <li><a href="#">Shoulder Repair</a></li>
+                                <li><a href="./services/knee-replacement.html">Knee Replacement</a></li>
+                                <li><a href="./services/hip-replacement.html">Hip Replacement</a></li>
+                                <li><a href="./services/shoulder-repair.html">Shoulder Repair</a></li>
                                 <li><a href="./services/dekompressor.html">Dekompressor® discectomy</a></li>
                                 <li><a href="./services/discography.html">Discography</a></li>
                             </ul>
                         </li>
                         <li class="dropdown-item-has-children">
-                            <a href="#">Medical Weight Loss</a>
+                            <a href="./services/weight-loss.html">Medical Weight Loss</a>
                         </li>
                         <li class="dropdown-item-has-children">
-                            <a href="#">Varicose Veins</a>
+                            <a href="./services/varicose-veins.html">Varicose Veins</a>
                         </li>
                         <li class="dropdown-item-has-children">
-                            <a href="#">B-12 Shots</a>
+                            <a href="./services/b12-shots.html">B-12 Shots</a>
                         </li>
                     </ul>
                 </li>
@@ -159,9 +155,8 @@
                                         class="popular-search-card-img" width="320" height="180">
                                     <p class="popular-search-card-desc">Hands-on care focused on improving alignment,
                                         mobility, and pain relief.</p>
-                                    <a href="./services/spinal-decompression.html"
-                                        class="popular-search-learn-more">Learn More <i class="fa fa-chevron-right"
-                                            aria-hidden="true"></i></a>
+                                    <a href="./services/chiropractic.html" class="popular-search-learn-more">Learn More
+                                        <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
                                 </article>
                             </div>
                             <div class="swiper-slide">
@@ -620,6 +615,17 @@
                                             accurate joint
                                             alignment and function.</p>
                                         <a href="./services/knee-replacement.html" class="see-service-btn">Learn More <i
+                                                class="fa fa-chevron-right right-icon"></i></a>
+                                    </article>
+                                </div>
+                                <div class="swiper-slide">
+                                    <article class="conditions-treatment-card">
+                                        <h5 class="treatment-title">Shoulder Repair</h5>
+                                        <img src="./assets/images/services/shoulder-repair.jpg" alt="Shoulder repair"
+                                            class="treatment-img" />
+                                        <p class="treatment-desc">Technology-guided surgical repair to restore shoulder
+                                            stability, strength, and function.</p>
+                                        <a href="./services/shoulder-repair.html" class="see-service-btn">Learn More <i
                                                 class="fa fa-chevron-right right-icon"></i></a>
                                     </article>
                                 </div>
