--- a/services/physical-therapy.html
+++ b/services/physical-therapy.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
-        content="Botox for chronic migraines at Goodlife Physical Medicine. Minimally invasive migraine treatment to reduce frequency and severity. South Bay Los Angeles." />
+        content="Physical therapy at Goodlife Physical Medicine. Rehabilitation, mobility, and pain relief. South Bay Los Angeles." />
     <meta name="keywords"
-        content="Botox for migraines, chronic migraine treatment, headache treatment, Goodlife, physical medicine, South Bay Los Angeles" />
+        content="physical therapy, PT, rehabilitation, mobility, pain relief, Goodlife, physical medicine, South Bay Los Angeles" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <title>
-        Botox for Migraines | Goodlife Physical Medicine & Chiropractic
+        Physical Therapy | Goodlife Physical Medicine & Chiropractic
     </title>
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="stylesheet" href="../css/home.css" />
@@ -135,29 +135,75 @@
 
     <main>
         <section class="about-page-banner" aria-label="About Goodlife Physical Medicine">
-            <h1>Digital X-Rays</h1>
+            <h4 class="subtitle">Transforming Lives with</h4>
+            <h1>Physical Therapy</h1>
         </section>
 
         <section class="about-section" aria-labelledby="about-heading">
             <div class="welcome-inner">
-                <img src="../assets/images/services/digital-x-rays.webp" class="welcome-image" alt="Digital X-Rays" />
-                <h2 class="welcome-heading">Precision Imaging for Faster Healing</h2>
-                Digital X-ray technology is a cornerstone of modern diagnostics at Goodlife Physical Medicine, providing
-                a high-resolution window into your internal health. Unlike traditional film X-rays, our digital system
-                uses electronic sensors to capture detailed images of your bones and joints almost instantaneously. This
-                advanced technology allows our medical team to view and manipulate images- zooming in on potential
-                hairline fractures or adjusting contrast to see subtle joint misalignments-ensuring a level of
-                diagnostic accuracy that was previously impossible. Because the images are digital, they can be shared
-                securely with your specialists or reviewed with you on a monitor in real-time, allowing you to see
-                exactly what is happening inside your body.
+                <img src="../assets/images/services/physical-therapy.jpeg" class="welcome-image"
+                    alt="Physical Therapy" />
+                <h2 class="welcome-heading">What is Physical Therapy?</h2>
+                Physical Therapy is a proven, evidence-based treatment for patients recovering from injury, managing
+                chronic pain, or restoring physical performance that has not improved with rest alone. <b>Common
+                    conditions
+                    include arthritis, fractures, sprains, and shoulder, knee, neck, and back pain-among many
+                    others.</b>
                 <br /><br />
-                Beyond superior image quality, digital X-rays are designed with patient safety and convenience as top
-                priorities. This technology significantly reduces radiation exposure compared to traditional methods,
-                often by as much as 80% to 90%. There is no need for chemical processing or long wait times; your
-                results are available within seconds, allowing us to move directly from diagnosis to a personalized
-                treatment plan in a single visit. Whether we are evaluating a sports injury, chronic back pain, or the
-                progression of arthritis, digital X-rays provide the clarity needed to help you move forward toward
-                recovery with confidence.
+                At Goodlife Physical Medicine, we take a personalized, whole-body approach to healing-because no two
+                bodies, injuries, or goals are the same. Our licensed physical therapists are movement specialists
+                trained to evaluate dysfunction, identify the root cause of pain, and design customized treatment plans
+                aligned with your lifestyle and long-term goals. We work closely with your medical team to provide
+                comprehensive, coordinated care under one roof.
+                <br /><br />
+                <b>Physical therapy improves health and function by:</b>
+                <ul style="display: flex; flex-direction: column;">
+                    <li>Increasing blood flow and reducing inflammation</li>
+                    <li>Restoring strength, mobility, and range of motion</li>
+                    <li>Improving flexibility, balance, and coordination</li>
+                    <li>Correcting movement patterns and body mechanics</li>
+                    <li>Reducing pain and preventing re-injury</li>
+                </ul>
+                <img src="../assets/images/services/physical-therapy-cover.jpg" class="welcome-image"
+                    style="float: right;" alt="Physical Therapy" />
+                <h2 class="welcome-heading">Our Physical Therapy Techniques</h2>
+                <b>Goodlife practitioners are skilled in a wide array of specialized methods to ensure your recovery is
+                    precise and sustainable:</b>
+                <br />
+                <ul style="display: flex; flex-direction: column;">
+                    <li><u>Manual Therapy:</u> Hands-on techniques to mobilize joints and soft tissues, reducing
+                        stiffness and improving circulation</li>
+                    <li><u>Therapeutic Exercise:</u> Custom-tailored strengthening and stretching programs designed to
+                        stabilize joints and prevent re-injury.</li>
+                    <li><u>Neuromuscular Re-education:</u> Specialized training to restore balance, coordination, and
+                        proper movement patterns.</li>
+                    <li><u>Modality Integration:</u> The use of advanced tools like electrical stimulation, heat/cold
+                        therapy, and ultrasound to manage acute inflammation.</li>
+                    <li><u>Post-Surgical Rehabilitation:</u> Expert guidance to safely restore range of motion and
+                        strength following orthopedic procedures.</li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="how-it-works-section">
+            <div class="how-it-works-inner">
+                <h2 class="section-title">How It Works</h2>
+                <div class="how-it-works-row">
+                    <div class="options-video" data-youtube-id="SE9E2UcAi1w" data-youtube-start="11" style="
+                background-image: url(https://img.youtube.com/vi/SE9E2UcAi1w/sddefault.jpg);
+              " aria-label="Video: Patient treatment demonstration">
+                        <button class="video-play-btn" aria-label="Play video" type="button">
+                            <i class="fa fa-play" aria-hidden="true"></i>
+                        </button>
+                    </div>
+                    <div class="options-video" data-youtube-id="SE9E2UcAi1w" data-youtube-start="11" style="
+                background-image: url(https://img.youtube.com/vi/SE9E2UcAi1w/sddefault.jpg);
+              " aria-label="Video: Patient treatment demonstration">
+                        <button class="video-play-btn" aria-label="Play video" type="button">
+                            <i class="fa fa-play" aria-hidden="true"></i>
+                        </button>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -254,6 +300,128 @@
                     </div>
                     <a href="#" class="section-btn section-btn-green">Verify My Insurance</a>
                 </article>
+            </div>
+        </section>
+
+        <section class="testimonials-section" aria-labelledby="testimonials-heading">
+            <h2 id="testimonials-heading">Physical Therapy Testimonials</h2>
+            <div class="slider-row">
+                <button class="slider-arrow slider-prev swiper-button-prev" aria-label="Previous testimonials">
+                    <i class="fa fa-chevron-left" aria-hidden="true"></i>
+                </button>
+                <div class="testimonials-slider">
+                    <div class="swiper-wrapper">
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--1" aria-hidden="true">A</span>
+                            <h4>Alexis A.</h4>
+                            <p>
+                                The Staff Was Amazing All Of Them Were So Nice Helpful
+                                Definitely Would Recommend This Place I'm Very Happy With The
+                                Care I Received
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--2" aria-hidden="true">W</span>
+                            <h4>Wendy H.</h4>
+                            <p>
+                                Dr. is great with explaining everything he is doing while
+                                working with you and listening to what works best for you.
+                                Very nice and clean office as well!
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--3" aria-hidden="true">K</span>
+                            <h4>Karen M.</h4>
+                            <p>
+                                These Therapists know their jobs. You give them the target
+                                area and I guarantee you will be better! Plus give you
+                                exercises to do at home in between or after care discharge.
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--4" aria-hidden="true">C</span>
+                            <h4>Chuck M.</h4>
+                            <p>
+                                They are very caring about their patients and their on top of
+                                their job and it's slowly working for sure thank for taking
+                                care of me!!
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--5" aria-hidden="true">K</span>
+                            <h4>Kiyomi V.</h4>
+                            <p>
+                                If your insurance can cover the costs, schedule your
+                                appointment ASAP.
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--6" aria-hidden="true">L</span>
+                            <h4>Laura G.</h4>
+                            <p>
+                                Recomiendo este lugar me encanta muy buena atención del
+                                personal y del dr. Aun mas
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--7" aria-hidden="true">J</span>
+                            <h4>Janice V.</h4>
+                            <p>
+                                I've said it before and I'll say it again. Goodlife
+                                Chiropractic in El Segundo is the hippest most user friendly
+                                office in town! You Go Dr. Matt!!
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--8" aria-hidden="true">D</span>
+                            <h4>Destiny S.</h4>
+                            <p>
+                                Came here because of an injury and was nervous but Brock made
+                                me super comfortable and I have came here 3 times already and
+                                I feel 10 times better! Highly recommend
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--9" aria-hidden="true">C</span>
+                            <h4>Colby P</h4>
+                            <p>
+                                Dr. Clements really wants to help his parents and takes the
+                                time to really listen to you. The front desk gals are always
+                                friendly without fail. I'm so happy I found this place!
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--10" aria-hidden="true">S</span>
+                            <h4>Sarah K.</h4>
+                            <p>
+                                Dr. Jeff is awesome and so is Charlie. I walk in and the know
+                                me and I feel extremely comfortable knowing my health is
+                                priority. I leave better each time I visit. Luv luv them ....
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--11" aria-hidden="true">E</span>
+                            <h4>Evan F.</h4>
+                            <p>
+                                Dr. Dave is great and found my shoulder problem quickly and
+                                eased my concerns and Leslie helped me so much with PT.
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--12" aria-hidden="true">P</span>
+                            <h4>Pauline C.</h4>
+                            <p>
+                                Goodlife has been key to my physical health and pain
+                                management journey. I initially discovered this practice
+                                through Groupon and loved it so much that I've been going back
+                                weekly since August 2023…
+                            </p>
+                        </article>
+                    </div>
+                </div>
+                <button class="slider-arrow slider-next swiper-button-next" aria-label="Next testimonials">
+                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                </button>
             </div>
         </section>
     </main>
