--- a/services/shoulder-repair.html
+++ b/services/shoulder-repair.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
-        content="Botox for chronic migraines at Goodlife Physical Medicine. Minimally invasive migraine treatment to reduce frequency and severity. South Bay Los Angeles." />
+        content="Shoulder repair and orthopedic care at Goodlife Physical Medicine. Treatment for shoulder pain and injury. South Bay Los Angeles." />
     <meta name="keywords"
-        content="Botox for migraines, chronic migraine treatment, headache treatment, Goodlife, physical medicine, South Bay Los Angeles" />
+        content="shoulder repair, shoulder surgery, orthopedic care, shoulder pain, Goodlife, physical medicine, South Bay Los Angeles" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <title>
-        Botox for Migraines | Goodlife Physical Medicine & Chiropractic
+        Shoulder Repair | Goodlife Physical Medicine & Chiropractic
     </title>
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="stylesheet" href="../css/home.css" />
@@ -135,29 +135,104 @@
 
     <main>
         <section class="about-page-banner" aria-label="About Goodlife Physical Medicine">
-            <h1>Digital X-Rays</h1>
+            <h4 class="subtitle">Transforming Lives with</h4>
+            <h1>Shoulder Repair</h1>
         </section>
 
         <section class="about-section" aria-labelledby="about-heading">
             <div class="welcome-inner">
-                <img src="../assets/images/services/digital-x-rays.webp" class="welcome-image" alt="Digital X-Rays" />
-                <h2 class="welcome-heading">Precision Imaging for Faster Healing</h2>
-                Digital X-ray technology is a cornerstone of modern diagnostics at Goodlife Physical Medicine, providing
-                a high-resolution window into your internal health. Unlike traditional film X-rays, our digital system
-                uses electronic sensors to capture detailed images of your bones and joints almost instantaneously. This
-                advanced technology allows our medical team to view and manipulate images- zooming in on potential
-                hairline fractures or adjusting contrast to see subtle joint misalignments-ensuring a level of
-                diagnostic accuracy that was previously impossible. Because the images are digital, they can be shared
-                securely with your specialists or reviewed with you on a monitor in real-time, allowing you to see
-                exactly what is happening inside your body.
+                <img src="../assets/images/services/shoulder-repair.jpg" class="welcome-image" alt="Shoulder repair" />
+                <h2 class="welcome-heading">What is Machine-Assisted Shoulder Repair?</h2>
+                Machine-Assisted Shoulder Repair is a state-of-the-art solution for patients suffering from chronic
+                shoulder instability, rotator cuff tears, or advanced joint degeneration. At Goodlife Physical Medicine,
+                we utilize world-class, high-precision equipment to move beyond the limitations of traditional surgery.
+                By integrating advanced digital mapping and robotic-assisted guidance, our surgeons can visualize the
+                intricate anatomy of the shoulder socket and tendons in a 3D space. This level of detail allows for a
+                repair that is specifically calibrated to your unique range of motion, ensuring the joint is both strong
+                and flexible.
                 <br /><br />
-                Beyond superior image quality, digital X-rays are designed with patient safety and convenience as top
-                priorities. This technology significantly reduces radiation exposure compared to traditional methods,
-                often by as much as 80% to 90%. There is no need for chemical processing or long wait times; your
-                results are available within seconds, allowing us to move directly from diagnosis to a personalized
-                treatment plan in a single visit. Whether we are evaluating a sports injury, chronic back pain, or the
-                progression of arthritis, digital X-rays provide the clarity needed to help you move forward toward
-                recovery with confidence.
+                The shoulder is the most mobile joint in the human body, which makes precision during repair absolutely
+                critical. Our specialized equipment acts as a high-tech GPS, guiding every movement to ensure that
+                anchors, sutures, or implants are placed with sub-millimeter accuracy. This machine-assisted approach is
+                significantly less invasive than traditional open surgery; it prioritizes "tissue sparing," meaning we
+                protect the healthy deltoid and surrounding muscles that are vital for your strength. Because there is
+                less trauma to the soft tissues, patients often report a much smoother recovery process and a faster
+                return to overhead movements.
+                <br /><br />
+                At Goodlife, we are committed to a comprehensive recovery plan that starts before you ever enter the
+                operating room. We use our advanced
+                diagnostic suite to confirm that machine-assisted repair is the safest and most effective option for
+                your specific injury. Following the procedure, our physical therapy team works in tandem with the
+                surgical data to create a rehabilitative program that respects your new joint's limits while pushing for
+                optimal performance. If shoulder pain has made it impossible to lift, reach, or even sleep comfortably,
+                we invite you to schedule a consultation to see how our advanced technology can restore your strength.
+                <div class="conditions-hero-actions-row">
+                    <a href="#" class="action-button">Book a free consultation</a>
+                    <a href="#" class="action-button">Verify Insurance</a>
+                    <a href="#" class="action-button">Call Us</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="how-it-works-section">
+            <div class="how-it-works-inner">
+                <h2 class="section-title">How It Works</h2>
+                <div class="how-it-works-row">
+                    <div class="options-video" data-youtube-id="SE9E2UcAi1w" data-youtube-start="11" style="
+                background-image: url(https://img.youtube.com/vi/SE9E2UcAi1w/sddefault.jpg);
+              " aria-label="Video: Patient treatment demonstration">
+                        <button class="video-play-btn" aria-label="Play video" type="button">
+                            <i class="fa fa-play" aria-hidden="true"></i>
+                        </button>
+                    </div>
+                    <div class="options-video" data-youtube-id="SE9E2UcAi1w" data-youtube-start="11" style="
+                background-image: url(https://img.youtube.com/vi/SE9E2UcAi1w/sddefault.jpg);
+              " aria-label="Video: Patient treatment demonstration">
+                        <button class="video-play-btn" aria-label="Play video" type="button">
+                            <i class="fa fa-play" aria-hidden="true"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="service-desc-section">
+            <div class="service-desc-inner">
+                <div class="service-desc-grid">
+                    <div class="service-desc-card">
+                        <h2 class="title">Right for You?</h2>
+                        <p class="description">
+                            Shoulder Repair could be right for you if you experience any of the following:
+                        </p>
+                        <ul>
+                            <li>
+                                Persistent pain that hasn't improved with conservative or interventional care
+                            </li>
+                            <li>Chronic rotator cuff tears that haven't healed with physical therapy</li>
+                            <li>Severe shoulder instability or frequent dislocations</li>
+                            <li>Advanced "bone-on-bone" arthritis in the shoulder joint</li>
+                            <li>Loss of strength and mobility following an acute sports injury or fall</li>
+                            <li>A desire for a precision-guided procedure with a faster return to activity</li>
+                        </ul>
+                    </div>
+
+                    <div class="service-desc-card">
+                        <h2 class="title">Potential Benefits</h2>
+                        <p class="description">
+                            Pevious patients who received Shoulder Repair have seen it:
+                        </p>
+                        <ul>
+                            <li>May delay or prevent future complications by ensuring perfect anatomical alignment.</li>
+                            <li>Provides longer-lasting stability through high- precision tendon and bone repair.</li>
+                            <li>Targets the source of pain by precisely addressing torn tissue and joint friction.</li>
+                            <li>Improves mobility and recovery speed by minimizing damage to healthy muscles.</li>
+                            <li>Reduces post-operative scarring through a more controlled, minimally invasive approach.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <a href="#" class="action-button">Book a free consultation</a>
             </div>
         </section>
 
@@ -254,6 +329,128 @@
                     </div>
                     <a href="#" class="section-btn section-btn-green">Verify My Insurance</a>
                 </article>
+            </div>
+        </section>
+
+        <section class="testimonials-section" aria-labelledby="testimonials-heading">
+            <h2 id="testimonials-heading">Shoulder Repair Testimonials</h2>
+            <div class="slider-row">
+                <button class="slider-arrow slider-prev swiper-button-prev" aria-label="Previous testimonials">
+                    <i class="fa fa-chevron-left" aria-hidden="true"></i>
+                </button>
+                <div class="testimonials-slider">
+                    <div class="swiper-wrapper">
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--1" aria-hidden="true">A</span>
+                            <h4>Alexis A.</h4>
+                            <p>
+                                The Staff Was Amazing All Of Them Were So Nice Helpful
+                                Definitely Would Recommend This Place I'm Very Happy With The
+                                Care I Received
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--2" aria-hidden="true">W</span>
+                            <h4>Wendy H.</h4>
+                            <p>
+                                Dr. is great with explaining everything he is doing while
+                                working with you and listening to what works best for you.
+                                Very nice and clean office as well!
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--3" aria-hidden="true">K</span>
+                            <h4>Karen M.</h4>
+                            <p>
+                                These Therapists know their jobs. You give them the target
+                                area and I guarantee you will be better! Plus give you
+                                exercises to do at home in between or after care discharge.
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--4" aria-hidden="true">C</span>
+                            <h4>Chuck M.</h4>
+                            <p>
+                                They are very caring about their patients and their on top of
+                                their job and it's slowly working for sure thank for taking
+                                care of me!!
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--5" aria-hidden="true">K</span>
+                            <h4>Kiyomi V.</h4>
+                            <p>
+                                If your insurance can cover the costs, schedule your
+                                appointment ASAP.
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--6" aria-hidden="true">L</span>
+                            <h4>Laura G.</h4>
+                            <p>
+                                Recomiendo este lugar me encanta muy buena atención del
+                                personal y del dr. Aun mas
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--7" aria-hidden="true">J</span>
+                            <h4>Janice V.</h4>
+                            <p>
+                                I've said it before and I'll say it again. Goodlife
+                                Chiropractic in El Segundo is the hippest most user friendly
+                                office in town! You Go Dr. Matt!!
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--8" aria-hidden="true">D</span>
+                            <h4>Destiny S.</h4>
+                            <p>
+                                Came here because of an injury and was nervous but Brock made
+                                me super comfortable and I have came here 3 times already and
+                                I feel 10 times better! Highly recommend
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--9" aria-hidden="true">C</span>
+                            <h4>Colby P</h4>
+                            <p>
+                                Dr. Clements really wants to help his parents and takes the
+                                time to really listen to you. The front desk gals are always
+                                friendly without fail. I'm so happy I found this place!
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--10" aria-hidden="true">S</span>
+                            <h4>Sarah K.</h4>
+                            <p>
+                                Dr. Jeff is awesome and so is Charlie. I walk in and the know
+                                me and I feel extremely comfortable knowing my health is
+                                priority. I leave better each time I visit. Luv luv them ....
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--11" aria-hidden="true">E</span>
+                            <h4>Evan F.</h4>
+                            <p>
+                                Dr. Dave is great and found my shoulder problem quickly and
+                                eased my concerns and Leslie helped me so much with PT.
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <span class="testimonial-avatar testimonial-avatar--12" aria-hidden="true">P</span>
+                            <h4>Pauline C.</h4>
+                            <p>
+                                Goodlife has been key to my physical health and pain
+                                management journey. I initially discovered this practice
+                                through Groupon and loved it so much that I've been going back
+                                weekly since August 2023…
+                            </p>
+                        </article>
+                    </div>
+                </div>
+                <button class="slider-arrow slider-next swiper-button-next" aria-label="Next testimonials">
+                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                </button>
             </div>
         </section>
     </main>
