--- a/services/spinal-cord.html
+++ b/services/spinal-cord.html
@@ -76,30 +76,30 @@
             <a href="../services.html" class="nav-link-item nav-link-with-arrow">Services</a>
             <ul class="dropdown-menu">
               <li class="dropdown-item-has-children">
-                <a href="#">Chiropractic</a>
+                <a href="./chiropractic.html">Chiropractic</a>
               </li>
               <li class="dropdown-item-has-children">
-                <a href="#">Physical Therapy</a>
+                <a href="./physical-therapy.html">Physical Therapy</a>
               </li>
               <li class="dropdown-item-has-children">
                 <a href="#">Evaluations & Diagnoses</a>
                 <ul class="dropdown-submenu">
-                  <li><a href="#">Digital X-rays</a></li>
-                  <li><a href="#">MRI</a></li>
-                  <li><a href="#">Ultrasound</a></li>
-                  <li><a href="#">Allergy testing</a></li>
-                  <li><a href="#">Food sensitivity testing</a></li>
+                  <li><a href="./digital-x-rays.html">Digital X-rays</a></li>
+                  <li><a href="./mua.html">MRI</a></li>
+                  <li><a href="./mua.html">Ultrasound</a></li>
+                  <li><a href="./allergy-testing.html">Allergy testing</a></li>
+                  <li><a href="./food-sensitivity-testing.html">Food sensitivity testing</a></li>
                 </ul>
               </li>
               <li class="dropdown-item-has-children">
                 <a href="#">Level 1 treatments: Conservative Care</a>
                 <ul class="dropdown-submenu">
-                  <li><a href="#">Chiropractic care & posture correction</a></li>
-                  <li><a href="#">Physical therapy</a></li>
-                  <li><a href="#">Massage therapy</a></li>
-                  <li><a href="#">K-Laser (Class IV laser therapy)</a></li>
-                  <li><a href="#">Trigger point injections</a></li>
-                  <li><a href="#">Spinal decompression therapy</a></li>
+                  <li><a href="./chiropractic.html">Chiropractic care & posture correction</a></li>
+                  <li><a href="./physical-therapy.html">Physical therapy</a></li>
+                  <li><a href="./mua.html">Massage therapy</a></li>
+                  <li><a href="./k-laser.html">K-Laser (Class IV laser therapy)</a></li>
+                  <li><a href="./transforminal-epidural.html">Trigger point injections</a></li>
+                  <li><a href="./spinal-decompression.html">Spinal decompression therapy</a></li>
                 </ul>
               </li>
               <li class="dropdown-item-has-children">
@@ -123,21 +123,21 @@
               <li class="dropdown-item-has-children">
                 <a href="#">Level 3 treatments: Orthopedic Care</a>
                 <ul class="dropdown-submenu">
-                  <li><a href="#">Knee Replacement</a></li>
-                  <li><a href="#">Hip Replacement</a></li>
-                  <li><a href="#">Shoulder Repair</a></li>
+                  <li><a href="./knee-replacement.html">Knee Replacement</a></li>
+                  <li><a href="./hip-replacement.html">Hip Replacement</a></li>
+                  <li><a href="./shoulder-repair.html">Shoulder Repair</a></li>
                   <li><a href="./dekompressor.html">Dekompressor® discectomy</a></li>
                   <li><a href="./discography.html">Discography</a></li>
                 </ul>
               </li>
               <li class="dropdown-item-has-children">
-                <a href="#">Medical Weight Loss</a>
+                <a href="./weight-loss.html">Medical Weight Loss</a>
               </li>
               <li class="dropdown-item-has-children">
-                <a href="#">Varicose Veins</a>
+                <a href="./varicose-veins.html">Varicose Veins</a>
               </li>
               <li class="dropdown-item-has-children">
-                <a href="#">B-12 Shots</a>
+                <a href="./b12-shots.html">B-12 Shots</a>
               </li>
             </ul>
           </li>
